--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-oauth/google": "^0.12.2",
     "@tanstack/react-query": "^5.8.4",
     "date-fns": "^2.30.0",
+    "firebase": "^12.5.0",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
